horizontal scroll bug fixed

--- a/src/index.css
+++ b/src/index.css
@@ -65,7 +65,6 @@ body {
 
 .navbar-toggler-icon {
   background-image: url("/icons/menu-fries-white.png") !important;
-
 }
 
 
@@ -186,6 +185,15 @@ border-bottom: 3px solid #EFE616;
   align-items: center;
 }
 
+#our-services .row.title-row, #our-services .row{
+  width: 100%;
+  margin: 0;
+}
+
+#our-services .title-row h3, .landing-page .title-row p  {
+  padding: 0;
+  margin: 0;
+}
 
 .landing-page .title{
   font-weight: 800;
@@ -266,7 +274,7 @@ border-bottom: 3px solid #EFE616;
   left: 50%;
   width: 20px;
   height: 20px;
-  transform: translateY(calc(-60px)) translateX(-50%) rotate(45deg);
+  transform: translateY(calc(-30px)) translateX(-50%) rotate(45deg);
 }
 
 .scroll-down span {
@@ -322,6 +330,7 @@ border-bottom: 3px solid #EFE616;
   padding: 55px 0 0 0;
 
 }
+
 #our-services .title-row h3{
   font-family: 'Josefin Sans';
   font-size: 20px;
@@ -433,7 +442,6 @@ font-family: 'Pattaya', sans-serif;
 
 #about-us{
   
-  width: 100%;
   padding: 55px 0 0 0;
   margin-top: 40px;
 }
